--- a/task1/index.html
+++ b/task1/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Task1</title>
     <style type="text/css">
         * {
             margin: 0;
