--- a/task7/index.html
+++ b/task7/index.html
@@ -10,6 +10,7 @@
         margin: 0;
         padding: 0;
     }
+    
     #loading {
         position: absolute;
         font-size: 20px;
@@ -25,18 +26,26 @@
     <canvas id="mainCanvas"></canvas>
     <div id="loading"></div>
     <script type="text/javascript" src="../lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../lib/Detector.js"></script>
     <script type="text/javascript" src="../lib/three.js"></script>
     <script type="text/javascript" src="../lib/OBJLoader.js"></script>
     <script type="text/javascript" src="../lib/MTLLoader.js"></script>
     <script type="text/javascript" src="../lib/stats.min.js"></script>
     <script type="text/javascript" src="../lib/dat.gui.min.js"></script>
     <script type="text/javascript" src="../lib/TrackballControls.js"></script>
+    <script type="text/javascript" src="../geometry/TeapotBufferGeometry.js"></script>
     <script type="text/javascript">
     var scene;
     var renderer;
     var camera;
-    var controls;
+    var light;
+    var ambientLight;
+
     var canvas;
+    var teapot;
+
+    var stat;
+    var controls;
 
     function initThree() {
         canvas = document.getElementById('mainCanvas');
@@ -47,7 +56,7 @@
         renderer = new THREE.WebGLRenderer({
             canvas: canvas
         });
-        renderer.setClearColor(0x404040);
+        renderer.setClearColor(0xaaaaaa);
 
         renderer.shadowMap.enabled = true;
         renderer.shadowMap.type = THREE.PCFSoftShadowMap;
@@ -55,25 +64,23 @@
 
     function initCamera() {
         camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, .1, 1000);
-        camera.position.set(0, 7, 10);
+        camera.position.set(0, 100, 300);
         camera.lookAt(new THREE.Vector3(0, 0, 0));
         scene.add(camera);
     }
 
-    var light;
-
     function initLight() {
-        var ambientLight = new THREE.AmbientLight(0xffffff);
-        light = new THREE.PointLight(0xffffff);
+        ambientLight = new THREE.AmbientLight(0x333333);
+        light = new THREE.DirectionalLight(0xffffff);
 
-        light.position.set(-10, 10, 7);
+        light.position.set(1000, 500, 300);
         light.castShadow = true;
-        scene.add(light);
 
         light.shadow.mapSize.width = 1000;
         light.shadow.mapSize.height = 1000;
         light.shadow.camera.near = 0.5;
         light.shadow.camera.far = 500;
+
         scene.add(ambientLight);
         scene.add(light);
     }
@@ -96,162 +103,101 @@
         controls.addEventListener('change', render);
     }
 
-    var floor = {};
-    var teapot = undefined;
-    var stat;
-
     function render() {
-        if (teapot) {
-            camera.lookAt(teapot.getWorldPosition());
-        }
         renderer.render(scene, camera);
-        stats.update();
     }
 
     function animate() {
         controls.update();
-        // render();
+        stats.update();
+        render();
+
         requestAnimationFrame(animate);
     }
 
     var normalMaterial;
     var cartoonMaterial;
-    var vertexShader;
-    var fragmentShader;
+
+    var outlineMaterial;
+    var outlineMesh;
 
     function initModel() {
-        var loading = document.getElementById('loading');
-        var onProgress = function(xhr) {
-            if (xhr.lengthComputable) {
-                var percentComplete = xhr.loaded / xhr.total * 100;
-                loading.innerHTML = Math.round(percentComplete, 2) + '% downloaded';
-                console.log(Math.round(percentComplete, 2));
+        var teapotGeometry = new THREE.TeapotBufferGeometry();
 
-                if (percentComplete == 100) {
-                    loading.innerHTML = '';
-                }
-            }
-        };
-
-        var onError = function(xhr) {};
-
-        var mtlLoader = new THREE.MTLLoader();
-        mtlLoader.setPath('../model/task7/');
-        mtlLoader.load('teapot.mtl', function(materials) {
-
-            materials.preload();
-
-            var objLoader = new THREE.OBJLoader();
-            objLoader.setMaterials(materials);
-            objLoader.setPath('../model/task7/');
-            objLoader.load('teapot.obj', function(object) {
-                scene.add(object);
-                teapot = object;
-
-                teapot.traverse(function(child) {
-                    if (child instanceof THREE.Mesh) {
-                        child.material.side = THREE.DoubleSide;
-                        child.castShadow = true;
-                        child.receiveShadow = true;
-                        normalMaterial = child.material;
-                    }
-
-                });
-
-                loadShader();
-                render();
-
-            }, onProgress, onError);
+        normalMaterial = new THREE.MeshLambertMaterial({
+            color: 0x96ff00,
+            side: THREE.DoubleSide
         });
+
+        teapot = new THREE.Mesh(teapotGeometry, normalMaterial);
+        scene.add(teapot);
+
+        outlineMaterial = new THREE.MeshBasicMaterial({
+            color: 0x000000,
+            side: THREE.BackSide
+        });
+        outlineMesh = new THREE.Mesh(teapotGeometry, outlineMaterial);
+        outlineMesh.position = teapot.position;
+        outlineMesh.scale.multiplyScalar(1.015);
+        scene.add(outlineMesh);
+
+        loadShader();
     }
 
     function loadShader() {
         $.get('../shader/task7/cartoon.vs', function(vs) {
             $.get('../shader/task7/cartoon.fs', function(fs) {
-                vertexShader = vs;
-                fragmentShader = fs;
-                createCartoon();
-                setupShader();
+                setupShader(vs, fs);
             });
         });
     }
 
-
-    function createCartoon() {
+    function setupShader(vs, fs) {
         cartoonMaterial = new THREE.ShaderMaterial({
-            vertexShader: vertexShader,
-            fragmentShader: fragmentShader,
+            vertexShader: vs,
+            fragmentShader: fs,
             uniforms: {
-                color: {
+                uColor: {
                     type: 'v3',
-                    value: new THREE.Color(GUIObj.teapotColor)
+                    value: normalMaterial.color
+                },
+                uLightDirection: {
+                    type: 'v3',
+                    value: light.position
+                },
+                uLightColor: {
+                    type: 'v3',
+                    value: light.color
                 },
                 uAmbientColor: {
                     type: 'v3',
-                    value: new THREE.Color('#ffffff')
-                },
-                light: {
-                    type: 'v3',
-                    value: light.position
+                    value: ambientLight.color
                 }
             },
             side: THREE.DoubleSide
         });
-        setupShader();
-    }
 
-    function setupShader() {
-        var material = GUIObj.shaderType == 'normal' ? normalMaterial : cartoonMaterial;
-        teapot.traverse(function(child) {
-            if (child instanceof THREE.Mesh) {
-                child.material = material;
-            }
-        });
+        teapot.material = cartoonMaterial;
         render();
     }
 
-    var GUIObj = {
-        shaderType: 'cartoon',
-        lightX: -10,
-        lightY: 10,
-        lightZ: 7
-    };
+    function onWindowResize() {
+        var canvasWidth = window.innerWidth;
+        var canvasHeight = window.innerHeight;
 
-    function initGUI() {
-        var gui = new dat.GUI();
-        gui.remember(GUIObj);
-        gui.add(GUIObj, 'shaderType', ['cartoon', 'normal'])
-            .onChange(function(value) {
-                setupShader();
-            });
+        renderer.setSize(canvasWidth, canvasHeight);
+        camera.aspect = canvasWidth / canvasHeight;
 
-        gui.add(GUIObj, 'lightX')
-            .min(-20).max(20).step(1)
-            .onChange(function(value) {
-                light.position.x = value;
-                createCartoon();
-            });
-        gui.add(GUIObj, 'lightY')
-            .min(-20).max(20).step(1)
-            .onChange(function(value) {
-                light.position.y = value;
-                createCartoon();
-            });
-        gui.add(GUIObj, 'lightZ')
-            .min(-20).max(20).step(1)
-            .onChange(function(value) {
-                light.position.z = value;
-                createCartoon();
-            });
+        camera.updateProjectionMatrix();
+
+        render();
     }
 
     function init() {
-
         initThree();
         initCamera();
         initLight();
         initControls();
-        initGUI();
 
         initModel();
 
@@ -261,9 +207,16 @@
         render();
         animate();
 
+        window.onresize = onWindowResize;
     }
 
-    init();
+    if (Detector.webgl) {
+        init();
+    }
+    else {
+        var warning = Detector.getWebGLErrorMessage();
+        document.body.appendChild(warning);
+    }
     </script>
 </body>
 
